--- a/index.html
+++ b/index.html
@@ -3,20 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OnSwift - Freelancer Collaboration Platform</title>
-    <meta name="description" content="OnSwift is a futuristic freelancer collaboration platform. Manage projects, hire talent, and streamline creative workflows." />
+
+    <!-- Primary Meta -->
+    <title>OnSwift - AI-Powered Agency Operations & Project Management Platform</title>
+    <meta name="description" content="OnSwift is the AI-powered agency operations platform built for creators scaling to agencies. Manage projects, operations, and teams — the smarter alternative to Notion and ClickUp." />
     <meta name="author" content="OnSwift" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="canonical" href="https://www.onswift.org" />
 
-    <meta property="og:title" content="OnSwift - Freelancer Collaboration Platform" />
-    <meta property="og:description" content="Manage projects, hire talent, and streamline creative workflows with OnSwift." />
+    <!-- Keywords -->
+    <meta name="keywords" content="agency operations, AI for agency operations, agency operations systems, alternative to Notion, alternative to ClickUp, creator to agency operator, operation management, managing projects, agency project management, freelancer collaboration" />
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://www.onswift.org" />
+    <meta property="og:site_name" content="OnSwift" />
+    <meta property="og:title" content="OnSwift - AI-Powered Agency Operations Platform" />
+    <meta property="og:description" content="The smarter alternative to Notion and ClickUp. Built for creators scaling to agency operators — manage projects, teams, and workflows all in one place." />
+    <meta property="og:image" content="https://www.onswift.org/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@OnSwift" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+    <meta name="twitter:creator" content="@OnSwift" />
+    <meta name="twitter:title" content="OnSwift - AI-Powered Agency Operations Platform" />
+    <meta name="twitter:description" content="The smarter alternative to Notion and ClickUp. Built for creators scaling to agency operators — manage projects, teams, and workflows all in one place." />
+    <meta name="twitter:image" content="https://www.onswift.org/og-image.png" />
 
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "OnSwift",
+      "url": "https://www.onswift.org",
+      "description": "AI-powered agency operations platform for creators scaling to agency operators. The smarter alternative to Notion and ClickUp.",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "120"
+      }
+    }
+    </script>
+
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
