--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:site_name" content="OnSwift" />
     <meta property="og:title" content="OnSwift - AI-Powered Agency Operations Platform" />
     <meta property="og:description" content="The smarter alternative to Notion and ClickUp. Built for creators scaling to agency operators — manage projects, teams, and workflows all in one place." />
+    <meta name="twitter:image" content="/og-image.png" />
     <meta property="og:image" content="https://www.onswift.org/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
